# worldbuilder

./: .gitmodules  README.md  WorldBuilder.docx  main_optimizer.py  pyproject.toml  requirements_conda_py37.txt  requirements_nerfstudio_py38.txt
src/: egypt_hyperparam_study.py
src/nerf/: load_llff.py  run_nerf_helpers.py
src/nerfstudio/nerfstudio/engine/: trainer.py
src/nerfstudio/nerfstudio/scripts/: eval.py  train.py
